Create flex container for responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {
     background-color: navajowhite;
 }
+body {
+    margin: 2rem;
+}
 img { 
     height: 300px; 
     width: auto;
@@ -14,4 +17,10 @@ p {
 }
 h3 {
     font-size: 24px;
+}
+/* Basic flex container for responsiveness*/
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
